Fix for safari z-index issue on callout caption.

--- a/resources/assets/styles/components/_callout.scss
+++ b/resources/assets/styles/components/_callout.scss
@@ -92,6 +92,7 @@
 
       .utk-image--caption {
         position: absolute;
+        z-index: 2;
         bottom: 0;
         padding: $golden-ratio-6 45% $golden-ratio-4 $golden-ratio-4;
         line-height: 1.47em;
